2007-06-26  William Cohen  <wcohen@redhat.com>

	* staptree.cxx (probe_point::print): Remove stray "\n".
	
2007-06-26  William Cohen  <wcohen@redhat.com>

	PR 4529
	* coveragedb.cxx: New.
	* coveragedb.h: New.
	* Makefile.am: Add coveragedb.cxx and sqlite3 to build.
	* Makefile.in: Regenerated.
	* configure.ac: Add test for sqlite3
	* configure: Regenerated.
	* systemtap.spec.in: Add dependencies for sqlite3/sqlite3-devel.
	* elaborate.h, elaborate.cxx
	  (derived_probe::collect_derivation_chain): New.
	  (alias_expansion_builder::build): Correct token location.
	  (semantic_pass_opt[12): Track used and unused variables/functions.
	* session.h (tapset_compile_coverage, unused_globals,
	  unused_probes, unused_functions): New fields.
	* staptree.h (unused_locals, probe_point::str): New member.
	* staptree.cxx: Ditto.
	* main.cxx: Add "-q" tapset coverage option and SYSTEMTAP_COVERAGE env.
	
2007-06-21  David Smith  <dsmith@redhat.com>

	* Makefile.in: Regenerated with automake 1.10.
	* aclocal.m4: Regenerated with aclocal 1.10.
	* configure: Regenerated.

2007-06-20  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (noinst_PROGRAMS): Add stap_merge.
	* Makefile.in: Rebuilt:
	* config.in: Rebuilt

2007-06-20  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Added AM_PROG_CC_C_O for compatibility with
	automake 1.10.
	* configure, aclocal.m4: Regenerated.

2007-06-20  David Smith  <dsmith@redhat.com>

	* buildrun.cxx (compile_pass): Unset environment variables that
	could interfere with building the kernel module.  Fixes PR 4664.
	* main.cxx (main): Unsets a few standard environment variables for
	safety.

2007-06-18  David Smith  <dsmith@redhat.com>

	* staprun.8.in: Fixed a couple of typos.

2007-06-15  Frank Ch. Eigler  <fche@elastic.org>

	PR 3331 cont'd.
	* loc2c.c (base_encoding): Tolerate absenece of DW_AT_encoding.
	(c_translate_pointer): Don't even try to find signedness, assume
	unsigned.

2007-06-14  Frank Ch. Eigler  <fche@elastic.org>
